--- a/结果.html
+++ b/结果.html
@@ -94,8 +94,8 @@
 <!--底部按钮-->
 <footer>
     <div class="button-wrap">
-        <button class="button-again" onclick="location.href='index.html'">再来一局</button>
-        <button class="button-share" onclick="location.href='index.html'">上传并分享</button>
+        <button class="button-again" ><a href="index.html">再来一局</a></button>
+        <button class="button-share" ><a href="index.html">上传并分享</a></button>
     </div>
 
 </footer>
